--- a/program/index.html
+++ b/program/index.html
@@ -315,6 +315,42 @@
         </p>
         <h3>Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти
                     </h3>
+        <p>В этом разделе мы пробуем заглянуть внутрь тех конкретных проблем, которые изнуряют жителей Санкт-Петербурга, ухудшают качество их жизни, подчас превращая последнюю в кошмар.
+        </p>
+        <p>В Российской Федерации действует Конституция, множество федеральных и региональных законов, санитарных норм, строительных правил, государственных стандартов и т.д. Подавляющее большинство этих документов описывают то, какой должна быть наша жизнь, в очень хорошем свете. Если верить нашим законам, то все мы должны жить в комфортной среде, иметь хорошую зарплату (если, конечно, делаем хорошую работу), повсеместно наслаждаться целыми квадратными километрами зелёных садов и парков, ездить по своевременно ремонтируемым дорогам, а дети наши должны ходить по чистым тротуарам в детские сады и учиться в школах в шаговой доступности от тихих, просторных, тёплых и светлых домов.</p>
+        <p>Но на практике в Санкт-Петербурге мы видим совсем другое. Список и анализ проблем, с которыми сталкиваются горожане, представлен в Разделе 2 настоящей Программы.
+        </p>
+        <p>Мы задались вопросом: как же так получается? Нормативы, указанные в законах, у нас одни. Реальность - другая. Но при этом чиновники не лишаются массово своих должностей! Их не увольняют в связи со служебным несоответствием, а наоборот, повышают в должностях, премируют, дают им государственные награды. А ведь именно они обязаны по долгу службы приводить реальность в соответствие с законами!
+        </p>
+        <p>Это связано с тем, что между законами и правилами с одной стороны - и реальностью с другой стороны - есть ещё одна прокладка. <strong>Это подзаконные акты - нормативные документы, которые издают исполнительные органы государственной власти (ИОГВ).</strong>
+        </p>
+        <p>Подзаконные акты - это множество самых разных порядков, положений, приказов и распоряжений, должностных инструкций, которые чиновники издают для самих себя. Именно в этих документах написано, каким образом должны реализовываться законы, кто и как должен применять санитарные нормы и следить за исполнением строительных правил и т.д. и т.п.
+        </p>
+        <p>Проблема заключается в том, что нормативные документы ИОГВ - это очень запутанная сеть, в которой даже профессиональным юристам приходится разбираться годами. Но часто именно в этих залежах зарыты корни реальных проблем. Иногда стоит заменить в каком-нибудь положении одно слово, например: написать вместо “в случае обнаружения нарушений чиновник имеет право” - что-нибудь вроде “чиновник обязан в десятидневный срок” - и целый комплекс проблем исчезнет, как будто его и не было! Потому что если чиновник “имеет право” и не сделал - то он и премию получил, и “благодарность” от заинтересованных лиц. А если он “обязан” и не сделал - то это грозит самыми суровыми карами, вплоть до уголовного преследования.
+        </p>
+        <h4>4.1. Как заставить работать управляющие компании и решить проблемы в сфере ЖКХ
+                                                </h4>
+        <p>В данный момент в сфере управления многоквартирными домами творится беспорядок. В основном проблемы связаны с работой управляющих компаний (УК).
+        </p>
+        <p>С одной стороны, <strong>работу УК фактически мало кто контролирует</strong>. Жилищная инспекция, имеющая ранг городского комитета, обязана проверять наличие у УК необходимых документов - например, смет на проведённые работы. Но не обязана заглядывать внутрь этих смет. Таким образом, УК легко может выделить миллион на прочистку канализации, при том, что в реальности затраты на эту прочистку составили тысяч 50 или (так тоже бывает) она вовсе не была нужна.
+        </p>
+        <p>УК сама может выбирать подрядчиков для проведения работ и платить им любые деньги по тем тарифам, которые посчитает нужным использовать. Например, УК может выделить 200 тысяч рублей на отмостку 16 кв. м тротуара, указав, что эти работы ведутся в скальном грунте, и для их проведения требуются чуть ли не взрывные работы. Реальные работы обойдутся УК в 10 раз дешевле. Деньги у жителей будут украдены. Но жилищная инспекция даже заглядывать в эти документы не станет: главное, что смета есть, всё оформлено, всё подписано. А что там внутри - не их компетенция.
+        </p>
+        <p>Даже те работы, которые УК выполняет, она может выполнять плохо - потому что, опять же, над ней нет должного контроля. Теоретически качество работ и содержания имущества домов должна проверять Жилищная инспекция. Но она выезжает на проверки в основном по жалобам жителей. А жители, к сожалению, редко находят время и силы жаловаться. Кроме того, в работе Жилинспекции создаются искусственные препоны. Например, в 2017 году для неё ввели новые требования в связи с вступлением в силу федерального закона о защите прав юридических лиц. Теперь, прежде чем жаловаться в инспекцию, жители обязаны сначала написать жалобу по той же самой проблеме в УК. Однако большинство людей об этом нововведении просто не знали и писали по привычке сразу в Жилинспекцию. В итоге в 2018 году 80% жалоб от жителей инспекция просто завернула, ссылаясь на эту новую норму.
+        </p>
+        <p>С другой стороны, <strong>многие УК управляют своими домами крайне неэффективно</strong>. На данный момент в Петербурге есть 7 разных ЖКС, долги которых составляют 100-200 миллионов рублей. Они находятся в предбанкротном состоянии. Проблема заключается в том, что у этих компаний скопилась огромная дебиторская задолженность - то есть собственники годами им не платят. Причем есть курьёзные ситуации, когда неплательщиком является… город Санкт-Петербург - собственник помещений. Между тем, сейчас существует простой и эффективный инструмент выбить деньги из неплательщиков - судебный приказ. Те УК, которые им пользуются, собирают до 99% денег с неплательщиков. Единственное, что мешает банкротным УК получить долги - нежелание работать и плохие юристы.</p>
+        <p>Таким образом, мы выделили две основные проблемы ЖКХ в Петербурге:
+            <ol>
+                <li>Работа УК недостаточно контролируется.
+                </li>
+                <li>Сами УК работают неэффективно.
+                </li>
+            </ol>
+        </p>
+        <p>Вот какие решения мы предлагаем.
+        </p>
+        <h5>Как организовать контроль за работой УК
+                                                                                        </h5>
     </section>
 
     <footer>
