--- a/program/index.html
+++ b/program/index.html
@@ -350,8 +350,22 @@
         <p>Вот какие решения мы предлагаем.
         </p>
         <h5>Как организовать контроль за работой УК
-                                                                                        </h5>
-    </section>
+        <p>Как ни странно, для контроля УК уже сейчас существует орган, работа которого могла бы быть вполне эффективной - речь идёт о Совете дома. Его возможности и обязанности описаны в Жилищном кодексе, в частности, в статье 161.1.
+        </p>
+    <p>Помимо всего прочего, Совет дома может контролировать и принимать работы, выполненные УК или её подрядчиками (пп. 5 п. 5 ст. 161.1 ЖК РФ). То есть если УК пытается навязать жильцам прочистку канализации за миллион, именно Совет дома может встать у неё на пути - и отказаться оплачивать ненужные работы.
+    </p>       
+<p>Кроме того, общее собрание собственников может наделить Совет дома правом принимать решение об использовании общего имущества (кому сдавать в аренду нежилые помещения, или почём отдавать под рекламу брандмауэр), а также о том, как использовать придомовую территорию (расширить парковку, высадить деревья, построить детскую площадку). То есть именно Совет дома является ответом на львиную долю всех тех вопросов, которые вызывают острые коммунальные конфликты в Петербурге.
+</p>               
+<p>Проблема заключается в том, что подавляющее большинство Советов домов в Петербурге сейчас - это фейковые организации. Реально собрать людей, провести собрание и избрать настоящий Совет дома удалось единицам активистов в нашем городе.
+</p>             
+<p>Чаще всего мнимый “Совет дома” создаётся под эгидой УК. УК подделывают протокол общего собрания, в котором обозначено, что в Совет дома вошло два-три человека (как правило, это люди, подконтрольные УК). Председателем Совета дома при помощи поддельных выборов “назначают” какого-нибудь слабого человека, на которого легко надавить, либо родственника сотрудника УК, или вообще человека, который фактически в доме не живёт, и от его имени можно подписывать любую бумажку.</p>                                             </h5>
+<p>Мы видим решение проблемы ЖКХ в Петербурге в том, чтобы <strong>превратить Советы домов в реально действующие организации, объединяющие жителей.</strong>
+</p>    
+<p>Необходимо осознать один простой факт: кроме нас самих, никто не будет соблюдать наши интересы. И это не только российский - это общемировой опыт. В странах, где ЖКХ налажено и работает как часы, есть только два способа управления многоквартирными домами: либо у дома есть один собственник, который сдаёт квартиры в аренду; либо домом управляют сами жители, объединившиеся в той или иной форме. Для управления домом им приходится прилагать усилия, тратить на это своё время. Если мы, петербуржцы, хотим жить в красивых, чистых, отремонтированных домах и не переплачивать за это неизвестным нам проходимцам - придётся брать управление домом в свои руки!
+</p>
+<p>Но сказать легко - а как это сделать? Как создать настоящий, а не фейковый Совет дома? Сколько усилий придётся для этого приложить? Реально ли это вообще в огромных домах-муравейниках?
+</p>
+</section>
 
     <footer>
         <h3>Присоединяйтесь к команде Красимира Врански!</h3>
