--- a/program/index.html
+++ b/program/index.html
@@ -161,7 +161,43 @@
         </p>
         В пригородных районах - Кронштадтском, Колпинском, Курортном, Петродворцовом, Пушкинском - из инфраструктурных проблем больше всего беспокоят жителей дороги (15), школы (8), общественный транспорт (8). Много экологических проблем (21), из которых острее всего стоит проблема самовольных свалок мусора (5). Также распространены проблемы, связанные с ремонтом зданий (10).
         </p>
-        <table></table>
+        <table>
+            <thead>
+                <tr>
+                    <th>
+                        Районы:
+                    </th>
+                    <th>
+                        Адмиралтейский
+                    </th>
+                    <th>
+                        Василеостровский
+                    </th>
+                    <th>Выборгский</th>
+                    <th>Калининский</th>
+                    <th>Калининский</th>
+                    <th>Кировский</th>
+                    <th>Колпинский</th>
+                    <th>Колпинский</th>
+                    <th>Красногвардейский</th>
+                    <th>Красносельский</th>
+                    <th>Кронштадтский</th>
+                    <th>Курортный</th>
+                    <th>Московский</th>
+                    <th>Невский</th>
+                    <th>Невский</th>
+                    <th>Петроградский</th>
+                    <th>Петродворцовый</th>
+                    <th>Приморский</th>
+                    <th>Пушкинский</th>
+                    <th>Фрунзенский</th>
+                    <th>Центральный</th>
+                    <th>Лен. область</th>
+                    <th>ВСЕГО</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
         <h4>Анализ текущего состояния городского управления</h4>
         <p>Конечно, вам уже бросился в глаза колоссальный разрыв между идеальным Санкт-Петербургом, который мы все хотим видеть, описанным в Разделе 1, – и реальным положением дел, показанным в Разделе 2: огромное число петербуржцев живёт в ужасающих, неприемлемых или просто трудных условиях. Наверное, по пальцам можно пересчитать тех горожан, у которых не было бы никаких коммунальных или социальных неприятностей. А ведь большинство пунктов, которые мы включили в Раздел «Видение будущего», взяты из Стратегий 2030 и 2035 – разработанных под эгидой городского руководства и им же официально принятых в исполнение.
         </p>
@@ -359,13 +395,26 @@
 <p>Проблема заключается в том, что подавляющее большинство Советов домов в Петербурге сейчас - это фейковые организации. Реально собрать людей, провести собрание и избрать настоящий Совет дома удалось единицам активистов в нашем городе.
 </p>             
 <p>Чаще всего мнимый “Совет дома” создаётся под эгидой УК. УК подделывают протокол общего собрания, в котором обозначено, что в Совет дома вошло два-три человека (как правило, это люди, подконтрольные УК). Председателем Совета дома при помощи поддельных выборов “назначают” какого-нибудь слабого человека, на которого легко надавить, либо родственника сотрудника УК, или вообще человека, который фактически в доме не живёт, и от его имени можно подписывать любую бумажку.</p>                                             </h5>
-<p>Мы видим решение проблемы ЖКХ в Петербурге в том, чтобы <strong>превратить Советы домов в реально действующие организации, объединяющие жителей.</strong>
-</p>    
-<p>Необходимо осознать один простой факт: кроме нас самих, никто не будет соблюдать наши интересы. И это не только российский - это общемировой опыт. В странах, где ЖКХ налажено и работает как часы, есть только два способа управления многоквартирными домами: либо у дома есть один собственник, который сдаёт квартиры в аренду; либо домом управляют сами жители, объединившиеся в той или иной форме. Для управления домом им приходится прилагать усилия, тратить на это своё время. Если мы, петербуржцы, хотим жить в красивых, чистых, отремонтированных домах и не переплачивать за это неизвестным нам проходимцам - придётся брать управление домом в свои руки!
-</p>
-<p>Но сказать легко - а как это сделать? Как создать настоящий, а не фейковый Совет дома? Сколько усилий придётся для этого приложить? Реально ли это вообще в огромных домах-муравейниках?
-</p>
-</section>
+        <p>Мы видим решение проблемы ЖКХ в Петербурге в том, чтобы <strong>превратить Советы домов в реально действующие организации, объединяющие жителей.</strong>
+        </p>
+        <p>Необходимо осознать один простой факт: кроме нас самих, никто не будет соблюдать наши интересы. И это не только российский - это общемировой опыт. В странах, где ЖКХ налажено и работает как часы, есть только два способа управления многоквартирными домами: либо у дома есть один собственник, который сдаёт квартиры в аренду; либо домом управляют сами жители, объединившиеся в той или иной форме. Для управления домом им приходится прилагать усилия, тратить на это своё время. Если мы, петербуржцы, хотим жить в красивых, чистых, отремонтированных домах и не переплачивать за это неизвестным нам проходимцам - придётся брать управление домом в свои руки!
+        </p>
+        <p>Но сказать легко - а как это сделать? Как создать настоящий, а не фейковый Совет дома? Сколько усилий придётся для этого приложить? Реально ли это вообще в огромных домах-муравейниках?
+        </p>
+        <p>В данный момент это очень сложно. Поэтому мы предлагаем: <strong>обязать Администрации районов Санкт-Петербурга оказывать содействие собственникам помещений в многоквартирных домах по проведению общих собраний.</strong>
+        </p>
+        <p>Для этого мы предлагаем принять “Постановление о порядке организации содействия проведению общих собраний собственников помещений в многоквартирных домах Администрациями районов Санкт-Петербурга” (проект Постановления см. в Приложении 2 настоящей Программы).
+        </p>
+        <p>Кратко идея заключается в следующем: любой собственник многоквартирного дома, собрав необходимое число сторонников из числа своих соседей, имеет право обратиться в администрацию района с просьбой помочь ему провести общее собрание. Администрация района в таком случае обязана будет: - подробно рассказать собственникам, как именно по закону организовать собрание; - при необходимости провести обучение собственников, разъяснив им требования законов и иных нормативных актов; - помочь с составлением извещений собственников о дате и месте проведения собрания; - помочь с распространением извещений по квартирам; - предоставить помещение для проведения общего собрания в здании администрации (если требуется); - предоставить своего представителя для помощи в проведении собрания; представитель также обязан следить за соблюдением закона во время проведения собрания; - по желанию собственников - проверить правильность составления протоколов общего собрания; - помочь с составлением и распространением бюллетеней для голосования собственников в случае проведения заочного или очно-заочного голосования по поставленным вопросам; - распространять среди жителей многоквартирных домов информацию о том, что администрация оказывает содействие в проведении общих собраний.
+        </p>
+        <p>Соответствующие изменения необходимо будет внести также в должностные инструкции глав Администраций районов.
+        </p>
+        <p>
+            Ещё раз отметим: в деле наведения порядка в сфере ЖКХ ключевым фактором является желание собственников многоквартирных домов изменить ситуацию. Без их активной позиции кардинальные изменения невозможны. Всё, чем может помочь власть - это облегчить прохождение бюрократических процедур. Именно это мы и предлагаем сделать в виде обязательной помощи со стороны районных администраций.
+
+        </p>
+
+    </section>
 
     <footer>
         <h3>Присоединяйтесь к команде Красимира Врански!</h3>
