--- a/program/index.html
+++ b/program/index.html
@@ -175,16 +175,13 @@
                     </th>
                     <th>Выборгский</th>
                     <th>Калининский</th>
-                    <th>Калининский</th>
                     <th>Кировский</th>
-                    <th>Колпинский</th>
                     <th>Колпинский</th>
                     <th>Красногвардейский</th>
                     <th>Красносельский</th>
                     <th>Кронштадтский</th>
                     <th>Курортный</th>
                     <th>Московский</th>
-                    <th>Невский</th>
                     <th>Невский</th>
                     <th>Петроградский</th>
                     <th>Петродворцовый</th>
@@ -196,7 +193,31 @@
                     <th>ВСЕГО</th>
                 </tr>
             </thead>
-            <tbody></tbody>
+            <tbody>
+                <tr>
+                    <th>Всего болевых точек</th>
+                    <td>15</td>
+                    <td>23</td>
+                    <td>18</td>
+                    <td>20</td>
+                    <td>17</td>
+                    <td>11</td>
+                    <td>27</td>
+                    <td>17</td>
+                    <td>16</td>
+                    <td>19</td>
+                    <td>14</td>
+                    <td>13</td>
+                    <td>15</td>
+                    <td>21</td>
+                    <td>19</td>
+                    <td>15</td>
+                    <td>9</td>
+                    <td>34</td>
+                    <td>8</td>
+                    <td>331</td>
+                </tr>
+            </tbody>
         </table>
         <h4>Анализ текущего состояния городского управления</h4>
         <p>Конечно, вам уже бросился в глаза колоссальный разрыв между идеальным Санкт-Петербургом, который мы все хотим видеть, описанным в Разделе 1, – и реальным положением дел, показанным в Разделе 2: огромное число петербуржцев живёт в ужасающих, неприемлемых или просто трудных условиях. Наверное, по пальцам можно пересчитать тех горожан, у которых не было бы никаких коммунальных или социальных неприятностей. А ведь большинство пунктов, которые мы включили в Раздел «Видение будущего», взяты из Стратегий 2030 и 2035 – разработанных под эгидой городского руководства и им же официально принятых в исполнение.
