Update main page content

--- a/index.html
+++ b/index.html
@@ -40,37 +40,11 @@
         </nav>
     </header>
 
-
-     <h2 class="center">Сделаем Петербург красивым — вместе!</h2>
     <section class="slider">
 
-      <div class="slider-description">
-        <!-- <p>
-          Друзья!
-        </p> -->
-          <p>
-            Приветствую вас на моем официальном сайте. Семь лет я занимался общественной деятельностью, основал движения «Красивый Петербург» и «Петербургский гражданин». Участвовал в создании «Зелёной коалиции Петербурга».
-          </p>
-          <p>Сейчас я собираюсь избираться на пост Губернатора Санкт-Петербурга. Ознакомьтесь с моим предвыборным манифестом, биографией и программой.</p>
-          <p>Оставьте свои контакты, если вы хотите поставить подпись за моё выдвижение.
-          </p>
-          <p>И, конечно же, вступайте в ряды моих сторонников - заполняйте анкету. Спасибо за вашу поддержку!</p>
+<!--      <div class="slider-description">-->
+<!--      </div>-->
 
-        </p>
-        <div class="call-to-action">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform">Отдать голос за Красимира</a>
-          <!-- <button
-            class="action"
-            onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')"
-          >
-            Поддержать Красимира
-          </button> -->
-          <!-- <small>
-            Оставьте свои контакты, если вы хотите поставить подпись за
-            выдвижение или стать волонтером
-          </small> -->
-        </div>
-      </div>
       <!-- Slider main container -->
       <div class="swiper-container">
         <!-- Additional required wrapper -->
@@ -100,41 +74,17 @@
         <div class="swiper-scrollbar"></div>
       </div>
     </section>
-    <section class="dream">
-        <img class="logo" src="./icons/logo.svg" alt="Эмблема" />
-      <div>
-        <h2>У меня есть мечта</h2>
-        <p>Я вижу наш город красивым, зелёным и безопасным.</p>
-
-        <p>  Я вижу город с удобным общественным транспортом, который ходит часто и по расписанию, где люди не стоят в часовых пробках.</p>
-
-        <p>   Город с чистыми широкими тротуарами.</p>
-
-        <p>    Город тенистых парков и зелёных дворов, где приятно прогуляться и солнечным летом, и под покровом зимних облаков.</p>
-
-        <p>     Город, где легко растить детей и заниматься спортом.</p>
-
-        <p>   Город, где не страшно заболеть, потому что легко получить медицинскую помощь, а среда проживания доступна для всех.</p>
-      </div>
-    </section>
     <section>
-      <h2>Программа</h2>
-      <h3>Чего мы хотим добиться?
-        </h3>
-    <p>Диалога! Давайте разговаривать! Чиновники обязаны слушать людей. Власть обязана общаться с бизнесом. Бизнес должен говорить с простыми жителями. Разобщённость губит наше общество. Желание говорить, понимать и договариваться – двигает всех нас вперед!
-    </p>
-    <p>
-        Став губернатором, я обеспечу:
-        <ol>
-            <li>открытость всех действий госслужащих, за исключением тех, что связаны с гостайной;</li>
-            <li>упрощение структур власти, чтобы всем было понятно, кто чем занимается;</li>
-            <li>широкое общественное обсуждение каждого нового проекта – до того, как будет принято решение о его запуске или закрытии;</li>
-            <li>независимые и честные городские СМИ;</li>
-            <li>cхемы принятия решений, важных для горожан и бизнеса, будут прозрачны и визуализированы;</li>
-            <li>в прозрачной системе не получится осваивать бюджетные средства в собственный карман.</li>
-        </ol>
-    </p>
+        <h2>Друзья!</h2>
+
+        <p>Приветствую вас на моем официальном сайте.</p>
+        <p>Семь лет я занимался общественной деятельностью, основал движения «Красивый Петербург» и «Петербургский гражданин». Участвовал в создании «Зелёной коалиции Петербурга».</p>
+        <p>Сейчас я собираюсь избираться на пост Губернатора Санкт-Петербурга. Ознакомьтесь с моим предвыборным манифестом, биографией и программой.</p>
+        <p>Оставьте свои контакты, если вы хотите поставить подпись за моё выдвижение. И, конечно же, вступайте в ряды моих сторонников - заполняйте анкету. Спасибо за вашу поддержку!</p>
+
+        <h2>Сделаем Петербург красивым — вместе!</h2>
     </section>
+
     <footer>
         <!-- <h3>Присоединяйтесь к команде Красимира Врански!</h3> -->
         <!-- <p>Вместе мы вернем власть петербуржцам!</p>
