Update header button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="./manifest/">Манифест</a>
           <a href="./about/">О кандидате</a>
           <a href="./program/">Программа</a>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Присоединяйтесь</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Присоединяйтесь!</a>
         </nav>
     </header>
 
