Update header on all pages

--- a/manifest/index.html
+++ b/manifest/index.html
@@ -25,18 +25,19 @@
 
 <body>
     <header>
-        <h1>
-        Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr>
-        <nobr>Красимир Врански</nobr>
-        <img src="../images/main.jpeg" class="main-photo" />
-      </h1>
-        <nav class="menu">
-            <a href="../">Главная</a>
-            <a href="../about/">О кандидате</a>
-            <a href="../manifest/">Манифест</a>
-            <a href="#">Программа</a>
-            <!-- <a href="../results/">Результаты</a> -->
-            <!-- <a href="#join">Поддержать</a> -->
+        <div class="logo">
+          <img class="logo" src="../images/header-75x75.png" alt="Лого">
+          <h1>
+            <nobr>Красимир Врански</nobr><br/>
+            <small>Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></small>
+          </h1>
+        </div>
+      <nav class="menu">
+          <a href="../">Главная</a>
+          <a href="../manifest/">Манифест</a>
+          <a href="../about/">О кандидате</a>
+          <a href="../program/">Программа</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Присоединяйтесь!</a>
         </nav>
     </header>
 
