--- a/program/index.html
+++ b/program/index.html
@@ -25,18 +25,19 @@
 
 <body>
     <header>
-        <h1>
-        Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr>
-        <nobr>Красимир Врански</nobr>
-        <img src="../images/main.jpeg" class="main-photo" />
-      </h1>
-        <nav class="menu">
-            <a href="../">Главная</a>
-            <a href="../about/">О кандидате</a>
-            <a href="../manifest/">Манифест</a>
-            <a href="#">Программа</a>
-            <!-- <a href="../results/">Результаты</a> -->
-            <!-- <a href="#join">Поддержать</a> -->
+        <div class="logo">
+          <img class="logo" src="../images/header-75x75.png" alt="Лого">
+          <h1>
+            <nobr>Красимир Врански</nobr><br/>
+            <small>Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></small>
+          </h1>
+        </div>
+      <nav class="menu">
+          <a href="../">Главная</a>
+          <a href="../manifest/">Манифест</a>
+          <a href="../about/">О кандидате</a>
+          <a href="../program/">Программа</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Присоединяйтесь!</a>
         </nav>
     </header>
 
@@ -410,11 +411,11 @@
         <p>Как ни странно, для контроля УК уже сейчас существует орган, работа которого могла бы быть вполне эффективной - речь идёт о Совете дома. Его возможности и обязанности описаны в Жилищном кодексе, в частности, в статье 161.1.
         </p>
     <p>Помимо всего прочего, Совет дома может контролировать и принимать работы, выполненные УК или её подрядчиками (пп. 5 п. 5 ст. 161.1 ЖК РФ). То есть если УК пытается навязать жильцам прочистку канализации за миллион, именно Совет дома может встать у неё на пути - и отказаться оплачивать ненужные работы.
-    </p>       
+    </p>
 <p>Кроме того, общее собрание собственников может наделить Совет дома правом принимать решение об использовании общего имущества (кому сдавать в аренду нежилые помещения, или почём отдавать под рекламу брандмауэр), а также о том, как использовать придомовую территорию (расширить парковку, высадить деревья, построить детскую площадку). То есть именно Совет дома является ответом на львиную долю всех тех вопросов, которые вызывают острые коммунальные конфликты в Петербурге.
-</p>               
+</p>
 <p>Проблема заключается в том, что подавляющее большинство Советов домов в Петербурге сейчас - это фейковые организации. Реально собрать людей, провести собрание и избрать настоящий Совет дома удалось единицам активистов в нашем городе.
-</p>             
+</p>
 <p>Чаще всего мнимый “Совет дома” создаётся под эгидой УК. УК подделывают протокол общего собрания, в котором обозначено, что в Совет дома вошло два-три человека (как правило, это люди, подконтрольные УК). Председателем Совета дома при помощи поддельных выборов “назначают” какого-нибудь слабого человека, на которого легко надавить, либо родственника сотрудника УК, или вообще человека, который фактически в доме не живёт, и от его имени можно подписывать любую бумажку.</p>                                             </h5>
         <p>Мы видим решение проблемы ЖКХ в Петербурге в том, чтобы <strong>превратить Советы домов в реально действующие организации, объединяющие жителей.</strong>
         </p>
