--- a/results/index.html
+++ b/results/index.html
@@ -26,21 +26,21 @@
 
   <body>
     <header>
-      <h1>
-        <span class="top"
-          >Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></span
-        >
-        <img class="logo" src="../icons/logo.svg" alt="Эмблема" />
-        <span class="bottom">Красимир Врански</span>
-      </h1>
+        <div class="logo">
+          <img class="logo" src="../images/header-75x75.png" alt="Лого">
+          <h1>
+            <nobr>Красимир Врански</nobr><br/>
+            <small>Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></small>
+          </h1>
+        </div>
+      <nav class="menu">
+          <a href="../">Главная</a>
+          <a href="../manifest/">Манифест</a>
+          <a href="../about/">О кандидате</a>
+          <a href="../program/">Программа</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Присоединяйтесь!</a>
+        </nav>
     </header>
-    <nav class="menu">
-      <a href="../">Главная</a>
-      <a href="../about/">О кандидате</a>
-      <a href="../manifest/">Манифест</a>
-      <a href="../program/">Программа</a>
-      <a href="#">Результаты</a>
-    </nav>
 
     <section>
       <h2>Результаты</h2>
