--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </h1>
         </div>
       <nav class="menu">
-          <a href="#">Главная</a>
+          <a href="./">Главная</a>
           <a href="./manifest/">Манифест</a>
           <a href="./about/">О кандидате</a>
           <a href="./program/">Программа</a>
