Add email link in footer

--- a/index.html
+++ b/index.html
@@ -86,15 +86,9 @@
     </section>
 
     <footer>
-        <!-- <h3>Присоединяйтесь к команде Красимира Врански!</h3> -->
-        <!-- <p>Вместе мы вернем власть петербуржцам!</p>
-        <h4 id="join">Будьте в курсе!</h4>
-        <button
-          class="action"
-          onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')"
-        >
-          Заполните форму волонтера
-        </button> -->
+        <section>
+            Написать сообщение Красимиру Врански — <a href="mailto:vranski.team@gmail.com" target="_blank">vranski.team@gmail.com</a>
+        </section>
         <nav class="socials">
           <a href="https://vk.com/vranski_team">
             <svg
