--- a/results/index.html
+++ b/results/index.html
@@ -56,6 +56,9 @@
       >
         Заполните форму волонтера
       </button>
+      <section>
+            Написать сообщение Красимиру Врански — <a href="mailto:vranski.team@gmail.com" target="_blank">vranski.team@gmail.com</a>
+      </section>
       <nav class="socials">
         <a href="https://vk.com/vranski_team">
           <svg
