--- a/manifest/index.html
+++ b/manifest/index.html
@@ -125,7 +125,7 @@
 
         </p>
 
-        <h2>Как помочь?</h2>
+        <h3>Как помочь?</h3>
         <p>
             Если вы хотите помочь кампании:
 
@@ -140,18 +140,10 @@
                 </li>
             </ul>
         </p>
-        <p>Сделаем Петербург красивым - вместе!
-        </p>
-        <a href="../program/">Подробнее</a>
+        <h3>Сделаем Петербург красивым - вместе!</h3>
     </section>
 
     <footer>
-        <h3>Присоединяйтесь к команде Красимира Врански!</h3>
-        <p>Вместе мы вернем власть петербуржцам!</p>
-        <h4 id="join">Будьте в курсе!</h4>
-        <button class="action" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')">
-            Заполните форму волонтера
-        </button>
         <section>
             Написать сообщение Красимиру Врански — <a href="mailto:vranski.team@gmail.com" target="_blank">vranski.team@gmail.com</a>
         </section>
