Update program page

--- a/program/index.html
+++ b/program/index.html
@@ -346,7 +346,7 @@
         </p>
         <p>Вот какие решения мы предлагаем.
         </p>
-        <h5>Как организовать контроль за работой УК</h5>
+        <h4>Как организовать контроль за работой УК</h4>
         <p>Как ни странно, для контроля УК уже сейчас существует орган, работа которого могла бы быть вполне эффективной - речь идёт о <b>Совете дома</b>. Его возможности и обязанности описаны в Жилищном кодексе, в частности, в статье 161.1.
         </p>
     <p>Помимо всего прочего, Совет дома может контролировать и принимать работы, выполненные УК или её подрядчиками (пп. 5 п. 5 ст. 161.1 ЖК РФ). То есть если УК пытается навязать жильцам прочистку канализации за миллион, именно Совет дома может встать у неё на пути - и отказаться оплачивать ненужные работы.
@@ -359,7 +359,8 @@
         <p>Мы видим решение проблемы ЖКХ в Петербурге в том, чтобы <b>превратить Советы домов в реально действующие организации, объединяющие жителей.</b></p>
         <p>Необходимо осознать один простой факт: кроме нас самих, никто не будет соблюдать наши интересы. И это не только российский - это общемировой опыт. В странах, где ЖКХ налажено и работает как часы, есть только два способа управления многоквартирными домами: либо у дома есть один собственник, который сдаёт квартиры в аренду; либо домом управляют сами жители, объединившиеся в той или иной форме. Для управления домом им приходится прилагать усилия, тратить на это своё время. Если мы, петербуржцы, хотим жить в красивых, чистых, отремонтированных домах и не переплачивать за это неизвестным нам проходимцам - придётся брать управление домом в свои руки!</p>
         <p>Но сказать легко - а как это сделать? Как создать настоящий, а не фейковый Совет дома? Сколько усилий придётся для этого приложить? Реально ли это вообще в огромных домах-муравейниках?</p>
-        <p>В данный момент это очень сложно. Поэтому мы предлагаем: <b>обязать Администрации районов Санкт-Петербурга оказывать содействие собственникам помещений в многоквартирных домах по проведению общих собраний</b>.</p>
+        <p>В данный момент это очень сложно. Поэтому мы предлагаем:</p>
+        <p style="padding-left: 3rem;"><b>обязать Администрации районов Санкт-Петербурга оказывать содействие собственникам помещений в многоквартирных домах по проведению общих собраний</b>.</p>
         <p>Для этого мы предлагаем принять “Постановление о порядке организации содействия проведению общих собраний собственников помещений в многоквартирных домах Администрациями районов Санкт-Петербурга” (проект Постановления см. в Приложении 2 настоящей Программы).</p>
         <p>Кратко идея заключается в следующем: любой собственник многоквартирного дома, собрав необходимое число сторонников из числа своих соседей, имеет право обратиться в администрацию района с просьбой помочь ему провести общее собрание. Администрация района в таком случае обязана будет:</p>
         <ul>
@@ -376,7 +377,7 @@
         <p>Соответствующие изменения необходимо будет внести также в должностные инструкции глав Администраций районов.</p>
         <p>Ещё раз отметим: в деле наведения порядка в сфере ЖКХ ключевым фактором является желание собственников многоквартирных домов изменить ситуацию. Без их активной позиции кардинальные изменения невозможны. Всё, чем может помочь власть - это облегчить прохождение бюрократических процедур. Именно это мы и предлагаем сделать в виде обязательной помощи со стороны районных администраций.</p>
 
-        <h3>Как избавиться от неэффективных УК</h3>
+        <h4>Как избавиться от неэффективных УК</h4>
 
         <p>Решить проблему неэффективных УК довольно просто: для этого необходимо шире применять отъём лицензий. По нашему мнению, на рынке жилищно-коммунальных услуг должна существовать рабочая конкуренция, в которой неэффективные УК будут неизбежно проигрывать.</p>
         <p>Механизм отъёма лицензий существует уже сейчас. Для того, чтобы лишить УК лицензии, Жилищная инспекция должна зафиксировать в её работе грубое нарушение. В этой сфере тоже есть проблемы: например, грубые нарушения иногда оцениваются Жилинспекцией как обычные.</p>
@@ -414,6 +415,14 @@
         Губернатор Санкт-Петербурга<br/>
         К.Х. Врански
         </p>
+
+        <h4 class="center">Положение о порядке организации содействия проведению общих собраний собственников помещений в многоквартирных домах Администрациями районов Санкт-Петербурга<br/>
+        <i>проект</i></h4>
+        <p style="text-align: right;">
+        УТВЕРЖДЕНО<br/>
+        постановлением Правительства Санкт-Петербурга
+        </p>
+
 
         <h4>1. Общие положения</h4>
         <p>1.1. Настоящее Положение определяет порядок организации содействия проведению общих собраний собственников помещений в многоквартирных домах Санкт-Петербурга со стороны Администраций районов Санкт-Петербурга.</p>
