Add preview for program

--- a/program/index.html
+++ b/program/index.html
@@ -40,7 +40,17 @@
           <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Присоединяйтесь!</a>
         </nav>
     </header>
-
+    <section class="program-preview">
+        <div class="intro"> Мы все хотим жить в счастливом, зеленом, удобном и безопасном городе. Именно таким Петербург мог бы быть уже сейчас. Но на самом деле вокруг себя мы видим другое: десятки, если не сотни однотипных проблем в каждом районе, на каждой улице. И полное отсутствие у городских властей понимания того, как эти проблемы можно было бы решить.</div>
+        <div class="sections">
+            <div class="col1">Раздел 1. Видение будущего
+            </div>
+            <div class="col2">Раздел 3. Реформа городского управления</div>
+            <div class="col3">Раздел 3. Реформа городского управления</div>
+            <div class="col4">Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</div>
+        </div>
+       
+    </section>
     <section id="program">
         <h2>
         Предвыборная программа Красимира Врански, кандидата в губернаторы
