--- a/results/index.html
+++ b/results/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/swiper.css" />
     <script src="../js/swiper.min.js"></script>
+    <meta property="og:image" content="./images/main.jpeg" />
     <title>
       Кандидат в Губернаторы Санкт-Петербурга Красимир Врански | Результаты
     </title>
@@ -26,20 +27,24 @@
 
   <body>
     <header>
-        <div class="logo">
-          <img class="logo" src="../images/header-75x75.png" alt="Лого">
-          <h1>
-            <nobr>Красимир Врански</nobr><br/>
-            <small>Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></small>
-          </h1>
-        </div>
+      <div class="logo">
+        <img class="logo" src="../images/header-75x75.png" alt="Лого" />
+        <h1>
+          <nobr>Красимир Врански</nobr><br />
+          <small>Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></small>
+        </h1>
+      </div>
       <nav class="menu">
-          <a href="../">Главная</a>
-          <a href="../manifest/">Манифест</a>
-          <a href="../about/">О кандидате</a>
-          <a href="../program/">Программа</a>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Присоединяйтесь!</a>
-        </nav>
+        <a href="../">Главная</a>
+        <a href="../manifest/">Манифест</a>
+        <a href="../about/">О кандидате</a>
+        <a href="../program/">Программа</a>
+        <a
+          href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform"
+          target="_blank"
+          >Присоединяйтесь!</a
+        >
+      </nav>
     </header>
 
     <section>
@@ -48,7 +53,10 @@
 
     <footer>
       <section>
-            Написать сообщение Красимиру Врански — <a href="mailto:vranski.team@gmail.com" target="_blank">vranski.team@gmail.com</a>
+        Написать сообщение Красимиру Врански —
+        <a href="mailto:vranski.team@gmail.com" target="_blank"
+          >vranski.team@gmail.com</a
+        >
       </section>
       <nav class="socials">
         <a href="https://vk.com/vranski_team">
